Migrate to java-libs 2.0.0